src/snapshots/2ec__tests__demo_008.snap
---
source: src/main.rs
expression: ta.backend()
---
TestBackend {
    buffer: Buffer {
        area: Rect { x: 0, y: 0, width: 55, height: 26 },
        content: [
            "╭─────────────────────────────────╮                    ",
            "│   /                             │                    ",
            "│                               f4│                    ",
            "│HEX (16)                      int│                    ",
            "╰─────────────────────────────────╯                    ",
            "╭─────────────────────────────────╮                    ",
            "│ 0 1 2 3 4 5 6 7 8 9 a b c d e f │                    ",
            "│   + - * / %    & | ^ n ~ < >    │                    ",
            "│ mem: store recall               │                    ",
            "│base: Dec Oct Bin                │                    ",
            "│mode: decimAl Sci                │                    ",
            "│                                 │                    ",
            "│                                 │                    ",
            "│                                 │                    ",
            "│                                 │                    ",
            "│                                 │                    ",
            "│                                 │                    ",
            "│                                 │                    ",
            "│                                 │                    ",
            "│                                 │                    ",
            "│                                 │                    ",
            "│                                 │                    ",
            "│                                 │                    ",
            "│? help      ESC clear        quit│                    ",
            "╰─────────────────────────────────╯                    ",
            "                                                       ",
        ],
        styles: [
            x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 1, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
            x: 7, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 8, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
            x: 12, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 14, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
            x: 19, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 1, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
            x: 6, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 8, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
            x: 10, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 12, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
            x: 14, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 16, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
            x: 18, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 1, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
            x: 6, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 7, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
            x: 12, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 13, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
            x: 14, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 16, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
            x: 18, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 2, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
            x: 7, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 16, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
            x: 22, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 31, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
            x: 34, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        ]
    },
    scrollback: Buffer {
        area: Rect { x: 0, y: 0, width: 55, height: 0 }
    },
    cursor: false,
    pos: (
        0,
        0,
    ),
}
