src/snapshots/2ec__tests__demo_013.snap
---
source: src/main.rs
expression: ta.backend()
---
TestBackend {
    buffer: Buffer {
        area: Rect { x: 0, y: 0, width: 55, height: 26 },
        content: [
            "╭─────────────────────────────────╮╭──────────────────╮",
            "│                                 ││ memory registers │",
            "│                                4││                  │",
            "│HEX (16)                      int││0: 0              │",
            "╰─────────────────────────────────╯│                  │",
            "╭─────────────────────────────────╮│1: 0              │",
            "│     location to store value     ││                  │",
            "│                                 ││2: 0              │",
            "│       0 1 2 3 4 5 6 7 8 9       ││                  │",
            "│                                 ││3: 0              │",
            "│                                 ││                  │",
            "│                                 ││4: 0              │",
            "│                                 ││                  │",
            "│                                 ││5: 0              │",
            "│                                 ││                  │",
            "│                                 ││6: 0              │",
            "│                                 ││                  │",
            "│                                 ││7: 0              │",
            "│                                 ││                  │",
            "│                                 ││8: 0              │",
            "│                                 ││                  │",
            "│                                 ││9: 0              │",
            "│                                 ││                  │",
            "│? help      ESC clear        quit││                  │",
            "╰─────────────────────────────────╯╰──────────────────╯",
            "                                                       ",
        ],
        styles: [
            x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 2, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
            x: 7, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 16, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
            x: 22, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
            x: 31, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
            x: 34, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        ]
    },
    scrollback: Buffer {
        area: Rect { x: 0, y: 0, width: 55, height: 0 }
    },
    cursor: false,
    pos: (
        0,
        0,
    ),
}
